<resources>
    <string name="app_name">Mod Store</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_server_repairing_title">Server is repairing</string>
    <string name="dialog_server_repairing_message">We are sorry to tell you that our server is repairing for updates. You cannot update app or send feedback, but you can still get app info installed in your device. We are trying to fix server as soon as possible.</string>
    <string name="home">Home</string>
    <string name="my_apps_and_games">My apps and games</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="checking_for_updates">Checking for updates …</string>
    <string name="available_updates">Available updates (%1$d)</string>
    <string name="update_all">Update all</string>
    <string name="update">Update</string>
    <string name="expand">Expand</string>
    <string name="no_update_found">No update found</string>
    <string name="done">Done</string>
    <string name="notification_chanel_download_name">Download Notification</string>
    <string name="new_feature">New Feature</string>
    <string name="not_support_auto_update">Doesn\'t support auto update.</string>
    <string name="notification_chanel_install_name">Install Notification</string>
    <string name="installing_app">Installing "%1$s"…</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular_apps">Popular apps</string>
    <string name="title_activity_description" translatable="false">DescriptionActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="about_this_app">About this app</string>
    <string name="developer_contact">Developer contact</string>
    <string name="score_star" translatable="false">%1$2.1f★</string>
    <string name="download_over">Over %1$s</string>
    <string name="downloads">downloads</string>
    <string name="years_old_above">%1$d years old above</string>
    <string name="install">Install</string>
    <string name="mod_apk">Mod apk</string>
    <string name="earn_money">Earn money</string>
    <string name="your_coins">Your coins:</string>
    <string name="ads_watched_today">Ads watched today: $1%d</string>
    <string name="watch_videos">Watch videos</string>
    <string name="watch">Watch</string>
    <string name="money_division" translatable="false">%1$d/%2$d</string>
    <string name="new_update_found">New update found</string>
    <string name="update_updater_dialog_message">Mod Store %1$s has released. Get the newest feature and continue using Youtube Updater by updating right now!</string>
    <string name="toast_no_ads">There\'s no ads now, please go back to see later!</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="feedback_content">Hey! Love or hate this app? We would love to hear from you.</string>
    <string name="feedback_edit_text_hint">Please write your valuable feedback here.</string>
    <string name="feedback_type">Feedback Type:</string>
    <string name="bug_report">Bug Report</string>
    <string name="suggestion">Suggestion</string>
    <string name="attach_application_log">Attach application log</string>
    <string name="attach_screenshot">Attach screenshot</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="attach_device_info">Attach device info</string>
    <string name="feedback_successfully_sent">Feedback was successfully sent</string>
    <string name="version">Version %1$s</string>
    <string name="app_introduction">The best android app store providing the highest quality of mod app. We stronly appreciate the developers dedicated to modding apps.</string>
    <string name="close">Close</string>
    <string name="changelog">Changelog</string>
    <string name="changelog_dialog_message">
        "\n1.2.0\n\n"

        "- User can send feedback now!\n"
        "- Add app about information\n"
        "- Add changelog in this and later versions\n"
    </string>
</resources>
